excel/iSyn731: Import original formula string

--- a/excel/iSyn731/compounds.yaml
+++ b/excel/iSyn731/compounds.yaml
@@ -12,15 +12,15 @@
   charge: 0
 - id: 1odec691215eg3p
   name: 1-octadec-6-9-12-15-tetraenoyl-sn-glycerol 3-phosphate
-  formula: C21H33O7P
+  formula: C21H33O7P1
   charge: -2
 - id: 1odec6912eg3p
   name: 1-octadec-6-9-12trienoyl-sn-glycerol 3-phosphate
-  formula: C21H35O7P
+  formula: C21H35O7P1
   charge: -2
 - id: 1odec9eg3p
   name: 1-octadec-9-enoyl-sn-glycerol 3-phosphate
-  formula: C21H39O7P
+  formula: C21H39O7P1
   charge: -2
 - id: CDPDG182
   name: CDP-1,2-dioctadec-9-12-dienoylglycerol
@@ -60,11 +60,11 @@
   charge: -1
 - id: c_DLiG3P
   name: 1,2-dioctadec-9-12-dienoyl-sn-glycerol 3-phosphate
-  formula: C39H67O8P
+  formula: C39H67O8P1
   charge: -2
 - id: c_DaLG3P
   name: 1,2-dioctadec-9-12-15-trienoyl-sn-glycerol 3-phosphate
-  formula: C39H63O8P
+  formula: C39H63O8P1
   charge: -2
 - id: cdpdodec691215eg
   name: CDP-1,2-dioctadec-6-9-12-15-tetraenoylglycerol
@@ -100,7 +100,7 @@
   charge: 0
 - id: cp_aLG3P
   name: 1-octadec-9-12-15-trienoyl-sn-glycerol 3-phosphate
-  formula: C21H35O7P
+  formula: C21H35O7P1
   charge: -2
 - id: cpd00001
   name: H2O
@@ -1874,7 +1874,7 @@
   kegg: C01419
 - id: cpd01048
   name: Arsenate
-  formula: AsHO4
+  formula: HO4As
   charge: -2
   kegg: C01478
 - id: cpd01080
@@ -1959,7 +1959,7 @@
   kegg: C02094
 - id: cpd01449
   name: Chlorophyllide
-  formula: C35H33MgN4O5
+  formula: C35H33N4O5Mg
   charge: 0
   kegg: C02139
 - id: cpd01476
@@ -2204,7 +2204,7 @@
   kegg: C03506
 - id: cpd02216
   name: Mg-protoporphyrin IX
-  formula: C34H30MgN4O4
+  formula: C34H30N4O4Mg
   charge: -1
   kegg: C03516
 - id: cpd02229
@@ -2389,7 +2389,7 @@
   kegg: C04525
 - id: cpd02762
   name: Mg-Protoporphyrin IX 13-monomethyl ester
-  formula: C35H33MgN4O4
+  formula: C35H33N4O4Mg
   charge: 0
   kegg: C04536
 - id: cpd02791
@@ -2553,7 +2553,7 @@
   kegg: C05274
 - id: cpd03148
   name: Chlorophyll a
-  formula: C55H71MgN4O5
+  formula: C55H71N4O5Mg
   charge: 0
   kegg: C05306
 - id: cpd03176
@@ -2855,7 +2855,7 @@
   kegg: C06510
 - id: cpd04098
   name: Arsenite
-  formula: AsH3O3
+  formula: H3O3As
   charge: 0
   kegg: C06697
 - id: cpd05235
@@ -2935,22 +2935,22 @@
   kegg: C11811
 - id: cpd08629
   name: 13(1)-Hydroxy-Mg-protoporphyrin IX 13-monomethyl ester
-  formula: C35H33MgN4O5
+  formula: C35H33N4O5Mg
   charge: 0
   kegg: C11829
 - id: cpd08630
   name: 13(1)-Oxo-Mg-protoporphyrin IX 13-monomethyl ester
-  formula: C35H31MgN4O5
+  formula: C35H31N4O5Mg
   charge: 0
   kegg: C11830
 - id: cpd08631
   name: Divinylprotochlorophyllide
-  formula: C35H28MgN4O5
+  formula: C35H28N4O5Mg
   charge: -1
   kegg: C11831
 - id: cpd08632
   name: Divinyl chlorophyllide a
-  formula: C35H31MgN4O5
+  formula: C35H31N4O5Mg
   charge: 0
   kegg: C11832
 - id: cpd08928
@@ -3023,12 +3023,12 @@
   charge: 42
 - id: cpd11420
   name: Oxidized thioredoxin
-  formula: C6H7NO2S2R2
+  formula: C6H7NO2R2S2
   charge: 0
   kegg: C00343
 - id: cpd11421
   name: Reduced thioredoxin
-  formula: C6H9NO2S2R2
+  formula: C6H9NO2R2S2
   charge: 0
   kegg: C00342
 - id: cpd11461
@@ -3038,157 +3038,157 @@
   kegg: C00039
 - id: cpd11464
   name: Butyryl-ACP
-  formula: C15H27N2O8PSR
+  formula: C15H27N2O8PRS
   charge: -1
   kegg: C05745
 - id: cpd11465
   name: But-2-enoyl-[acyl-carrier protein]
-  formula: C15H25N2O8PSR
+  formula: C15H25N2O8PRS
   charge: -1
   kegg: C04246
 - id: cpd11466
   name: Tetradecanoyl-[acyl-carrier protein]
-  formula: C25H47N2O8PSR
+  formula: C25H47N2O8PRS
   charge: -1
   kegg: C05761
 - id: cpd11467
   name: (2E)-Tetradecenoyl-[acp]
-  formula: C25H45N2O8PSR
+  formula: C25H45N2O8PRS
   charge: -1
   kegg: C05760
 - id: cpd11468
   name: Dodecanoyl-ACP
-  formula: C23H43N2O8PSR
+  formula: C23H43N2O8PRS
   charge: -1
   kegg: C05223
 - id: cpd11469
   name: (2E)-Dodecenoyl-[acp]
-  formula: C23H41N2O8PSR
+  formula: C23H41N2O8PRS
   charge: -1
   kegg: C05758
 - id: cpd11470
   name: Octanoyl-ACP
-  formula: C19H35N2O8PSR
+  formula: C19H35N2O8PRS
   charge: -1
   kegg: C05752
 - id: cpd11471
   name: (2E)-Octenoyl-[acp]
-  formula: C19H33N2O8PSR
+  formula: C19H33N2O8PRS
   charge: -1
   kegg: C05751
 - id: cpd11472
   name: Hexanoyl-ACP
-  formula: C17H31N2O8PSR
+  formula: C17H31N2O8PRS
   charge: -1
   kegg: C05749
 - id: cpd11473
   name: (2E)-Hexenoyl-[acp]
-  formula: C17H29N2O8PSR
+  formula: C17H29N2O8PRS
   charge: -1
   kegg: C05748
 - id: cpd11474
   name: Decanoyl-ACP
-  formula: C21H39N2O8PSR
+  formula: C21H39N2O8PRS
   charge: -1
   kegg: C05755
 - id: cpd11475
   name: (2E)-Decenoyl-[acp]
-  formula: C21H37N2O8PSR
+  formula: C21H37N2O8PRS
   charge: -1
   kegg: C05754
 - id: cpd11476
   name: hexadecanoyl-acp
-  formula: C27H51N2O8PSR
+  formula: C27H51N2O8PRS
   charge: -1
   kegg: C05764
 - id: cpd11477
   name: (2E)-Hexadecenoyl-[acp]
-  formula: C27H49N2O8PSR
+  formula: C27H49N2O8PRS
   charge: -1
   kegg: C05763
 - id: cpd11478
   name: (R)-3-Hydroxybutanoyl-[acyl-carrier protein]
-  formula: C15H27N2O9PSR
+  formula: C15H27N2O9PRS
   charge: -1
   kegg: C04618
 - id: cpd11479
   name: D-3-Hydroxyhexanoyl-[acp]
-  formula: C17H31N2O9PSR
+  formula: C17H31N2O9PRS
   charge: -1
   kegg: C05747
 - id: cpd11480
   name: D-3-Hydroxydodecanoyl-[acp]
-  formula: C23H43N2O9PSR
+  formula: C23H43N2O9PRS
   charge: -1
   kegg: C05757
 - id: cpd11481
   name: R-3-hydroxypalmitoyl-acyl-carrierprotein-
-  formula: C27H51N2O9PSR
+  formula: C27H51N2O9PRS
   charge: -1
   kegg: C04633
 - id: cpd11482
   name: (R)-3-Hydroxydecanoyl-[acyl-carrier protein]
-  formula: C21H39N2O9PSR
+  formula: C21H39N2O9PRS
   charge: -1
   kegg: C04619
 - id: cpd11483
   name: (R)-3-Hydroxyoctanoyl-[acyl-carrier protein]
-  formula: C19H35N2O9PSR
+  formula: C19H35N2O9PRS
   charge: -1
   kegg: C04620
 - id: cpd11484
   name: (R)-3-Hydroxytetradecanoyl-[acyl-carrier protein]
-  formula: C25H47N2O9PSR
+  formula: C25H47N2O9PRS
   charge: -1
   kegg: C04688
 - id: cpd11485
   name: 3-oxohexadecanoyl-acp
-  formula: C27H49N2O9PSR
+  formula: C27H49N2O9PRS
   charge: -1
   kegg: C05762
 - id: cpd11486
   name: 3-Oxohexanoyl-[acp]
-  formula: C17H29N2O9PSR
+  formula: C17H29N2O9PRS
   charge: -1
   kegg: C05746
 - id: cpd11487
   name: 3-oxodecanoyl-acp
-  formula: C21H37N2O9PSR
+  formula: C21H37N2O9PRS
   charge: -1
   kegg: C05753
 - id: cpd11488
   name: Acetoacetyl-ACP
-  formula: C15H25N2O9PSR
+  formula: C15H25N2O9PRS
   charge: -1
   kegg: C05744
 - id: cpd11489
   name: 3-oxododecanoyl-acp
-  formula: C23H41N2O9PSR
+  formula: C23H41N2O9PRS
   charge: -1
   kegg: C05756
 - id: cpd11490
   name: 3-oxooctanoyl-acp
-  formula: C19H33N2O9PSR
+  formula: C19H33N2O9PRS
   charge: -1
   kegg: C05750
 - id: cpd11491
   name: 3-oxotetradecanoyl-acp
-  formula: C25H45N2O9PSR
+  formula: C25H45N2O9PRS
   charge: -1
   kegg: C05759
 - id: cpd11492
   name: Malonyl-[acyl-carrier protein]
-  formula: C14H22N2O10PSR
+  formula: C14H22N2O10PRS
   charge: -2
   kegg: C01209
 - id: cpd11493
   name: ACP
-  formula: C11H21N2O7PSR
+  formula: C11H21N2O7PRS
   charge: -1
   kegg: C00229
 - id: cpd11494
   name: Acetyl-ACP
-  formula: C13H23N2O8PSR
+  formula: C13H23N2O8PRS
   charge: -1
   kegg: C03939
 - id: cpd11574
@@ -3218,17 +3218,17 @@
   kegg: C00886
 - id: cpd11825
   name: Octadecenoyl-ACP
-  formula: C29H53N2O8PSR
+  formula: C29H53N2O8PRS
   charge: -1
   kegg: C01203
 - id: cpd11830
   name: S-Aminomethyldihydrolipoylprotein
-  formula: C2H7NS2R
+  formula: C2H7NRS2
   charge: 1
   kegg: C01242
 - id: cpd11836
   name: (R)-3-Hydroxyacyl-[acyl-carrier protein]
-  formula: C15H27N2O9PSR
+  formula: C15H27N2O9PRS
   charge: -1
   kegg: C01271
 - id: cpd11906
@@ -3347,7 +3347,7 @@
   kegg: C02047
 - id: cpd12005
   name: Lipoylprotein
-  formula: CHS2R
+  formula: CHRS2
   charge: 0
   kegg: C02051
 - id: cpd12036
@@ -3367,7 +3367,7 @@
   kegg: C02412
 - id: cpd12105
   name: L-Methionyl-tRNA
-  formula: C15H22N6O4SR
+  formula: C15H22N6O4RS
   charge: 1
   kegg: C02430
 - id: cpd12132
@@ -3397,7 +3397,7 @@
   kegg: C02967
 - id: cpd12225
   name: Dihydrolipolprotein
-  formula: CH3S2R
+  formula: CH3RS2
   charge: 0
   kegg: C02972
 - id: cpd12226
@@ -3426,7 +3426,7 @@
   kegg: C03025
 - id: cpd12255
   name: L-Cysteinyl-tRNA(Cys)
-  formula: C13H18N6O4SR
+  formula: C13H18N6O4RS
   charge: 1
   kegg: C03125
 - id: cpd12256
@@ -3440,7 +3440,7 @@
   kegg: C03162
 - id: cpd12285
   name: N-Formylmethionyl-tRNA
-  formula: C16H21N6O5SR
+  formula: C16H21N6O5RS
   charge: 0
   kegg: C03294
 - id: cpd12313
@@ -3460,7 +3460,7 @@
   kegg: C03512
 - id: cpd12458
   name: Stearoyl-[acyl-carrier protein]
-  formula: C18H35OSR
+  formula: C18H35ORS
   charge: 0
   kegg: C04088
 - id: cpd12559
@@ -3514,12 +3514,12 @@
   kegg: C15937
 - id: cpd14881
   name: Linoleoyl-ACP
-  formula: C18H31OSR
+  formula: C18H31ORS
   charge: 0
   kegg: C16160
 - id: cpd14882
   name: alpha-Linolenoyl-ACP
-  formula: C18H29OSR
+  formula: C18H29ORS
   charge: 0
   kegg: C16161
 - id: cpd14935
@@ -3529,17 +3529,17 @@
   kegg: C16216
 - id: cpd14938
   name: 3-Oxostearoyl-[acp]
-  formula: C18H33O2SR
+  formula: C18H33O2RS
   charge: 0
   kegg: C16219
 - id: cpd14939
   name: 3-Hydroxystearoyl-[acp]
-  formula: C18H35O2SR
+  formula: C18H35O2RS
   charge: 0
   kegg: C16220
 - id: cpd14940
   name: (2E)-Octadecenoyl-[acp]
-  formula: C18H33OSR
+  formula: C18H33ORS
   charge: 0
   kegg: C16211
 - id: cpd15217
@@ -3556,7 +3556,7 @@
   charge: -3
 - id: cpd15239
   name: Hexadecenoyl-ACP
-  formula: C27H49N2O8PSR
+  formula: C27H49N2O8PRS
   charge: -1
 - id: cpd15240
   name: hexacosanoate
@@ -3588,7 +3588,7 @@
   charge: -3
 - id: cpd15294
   name: Tetradecenoyl-ACP
-  formula: C25H45N2O8PSR
+  formula: C25H45N2O8PRS
   charge: -1
 - id: cpd15295
   name: Tetradecenoyl-CoA
@@ -3653,35 +3653,35 @@
   charge: -1
 - id: cpd15366
   name: (R)-3-hydroxy-cis-dodec-5-enoyl-[acyl-carrier protein]
-  formula: C23H41N2O9PSR
+  formula: C23H41N2O9PRS
   charge: -1
 - id: cpd15368
   name: (R)-3-hydroxy-cis-myristol-7-eoyl-[acyl-carrier protein]
-  formula: C25H45N2O9PSR
+  formula: C25H45N2O9PRS
   charge: -1
 - id: cpd15369
   name: (R)-3-hydroxy-cis-palm-9-eoyl-[acyl-carrier protein]
-  formula: C27H49N2O9PSR
+  formula: C27H49N2O9PRS
   charge: -1
 - id: cpd15370
   name: (R)-3-hydroxy-cis-vacc-11-enoyl-[acyl-carrier protein]
-  formula: C29H53N2O9PSR
+  formula: C29H53N2O9PRS
   charge: -1
 - id: cpd15373
   name: 3-oxo-cis-dodec-5-enoyl-[acyl-carrier protein]
-  formula: C23H39N2O9PSR
+  formula: C23H39N2O9PRS
   charge: -1
 - id: cpd15374
   name: 3-oxo-cis-myristol-7-eoyl-[acyl-carrier protein]
-  formula: C25H43N2O9PSR
+  formula: C25H43N2O9PRS
   charge: -1
 - id: cpd15375
   name: 3-oxo-cis-palm-9-eoyl-[acyl-carrier protein]
-  formula: C27H47N2O9PSR
+  formula: C27H47N2O9PRS
   charge: -1
 - id: cpd15376
   name: 3-oxo-cis-vacc-11-enoyl-[acyl-carrier protein]
-  formula: C29H51N2O9PSR
+  formula: C29H51N2O9PRS
   charge: -1
 - id: cpd15378
   name: 4-Hydroxy-benzylalcohol
@@ -3693,11 +3693,11 @@
   charge: 0
 - id: cpd15415
   name: cis-dodec-5-enoyl-[acyl-carrier protein]
-  formula: C23H41N2O8PSR
+  formula: C23H41N2O8PRS
   charge: -1
 - id: cpd15416
   name: cis-dec-3-enoyl-[acyl-carrier protein]
-  formula: C21H37N2O8PSR
+  formula: C21H37N2O8PRS
   charge: -1
 - id: cpd15417
   name: CDP-1,2-didodecanoylglycerol
@@ -3834,19 +3834,19 @@
   charge: -2
 - id: cpd15568
   name: trans-3-cis-11-vacceoyl-[acyl-carrier protein]
-  formula: C29H51N2O8PSR
+  formula: C29H51N2O8PRS
   charge: -1
 - id: cpd15569
   name: trans-3-cis-5-dodecenoyl-[acyl-carrier protein]
-  formula: C23H39N2O8PSR
+  formula: C23H39N2O8PRS
   charge: -1
 - id: cpd15570
   name: trans-3-cis-7-myristoleoyl-[acyl-carrier protein]
-  formula: C25H43N2O8PSR
+  formula: C25H43N2O8PRS
   charge: -1
 - id: cpd15571
   name: trans-3-cis-9-palmitoleoyl-[acyl-carrier protein]
-  formula: C27H47N2O8PSR
+  formula: C27H47N2O8PRS
   charge: -1
 - id: cpd15677
   name: 1,2-diisoheptadecanoyl-sn-glycerol 3-phosphate
@@ -3969,7 +3969,7 @@
   charge: 1
 - id: cpdLiG3P
   name: 1-octadec-9-12-dienoyl-sn-glycerol 3-phosphate
-  formula: C21H37O7P
+  formula: C21H37O7P1
   charge: -2
 - id: cpdMG160
   name: 1,2-Diacyl-3-beta-D-galactosyl-sn-glycerol (n-C16)
@@ -3997,15 +3997,15 @@
   charge: 0
 - id: cpdPG181
   name: Phosphatidylglycerol (dioctadec-9-enoyl, n-C18:1)
-  formula: C42H78O10P
+  formula: C42H78O10P1
   charge: -1
 - id: cpdPG182
   name: Phosphatidylglycerol (dioctadec-9-12-dienoyl, n-C18:2)
-  formula: C42H74O10P
+  formula: C42H74O10P1
   charge: -1
 - id: cpdPG183
   name: Phosphatidylglycerol (dioctadec-9-12-15-trienoyl, n-C18:3)
-  formula: C42H70O10P
+  formula: C42H70O10P1
   charge: -1
 - id: cpdPGP181:9
   name: Phosphatidylglycerophosphate (dioctadec-9-enoyl, n-C18:1)
@@ -4081,23 +4081,23 @@
   charge: 0
 - id: octe691215ACP
   name: OctadecatetraenoilACP
-  formula: C29H47N2O8PSR
+  formula: C29H47N2O8PRS
   charge: -1
 - id: octe6912ACP
   name: gamma-linolenoilACP
-  formula: C29H49N2O8PSR
+  formula: C29H49N2O8PRS
   charge: -1
 - id: pa181:9
   name: 1,2-dioctadec-9-enoyl-sn-glycerol 3-phosphate
-  formula: C39H71O8P
+  formula: C39H71O8P1
   charge: -2
 - id: pa183:6:9:12
   name: 1,2-dioctadec-6-9-12-trienoyl-sn-glycerol 3-phosphate
-  formula: C39H63O8P
+  formula: C39H63O8P1
   charge: -2
 - id: pa184:6:9:12:15
   name: 1,2-dioctadec-6-9-12-15-tetraenoyl-sn-glycerol 3-phosphate
-  formula: C39H59O8P
+  formula: C39H59O8P1
   charge: -2
 - id: peptido_syn
   name: Peptidoglycan subunit of Synechocystis sp. PCC8603
@@ -4105,11 +4105,11 @@
   charge: -2
 - id: pg183:6:9:12
   name: Phosphatidylglycerol (dioctadec-6-9-12-trienoyl, n-C18:3)
-  formula: C42H70O10P
+  formula: C42H70O10P1
   charge: -1
 - id: pg184:6:9:12:15
   name: Phosphatidylglycerol (dioctadec-6-9-12-15-tetraenoyl, n-C18:4)
-  formula: C42H66O10P
+  formula: C42H66O10P1
   charge: -1
 - id: pgp183:6:9:12
   name: Phosphatidylglycerophosphate (dioctadec-6-9-12-trienoyl, n-C18:3)
