excel/iSyn731: Import all KEGG references

--- a/excel/iSyn731/compounds.yaml
+++ b/excel/iSyn731/compounds.yaml
@@ -106,7 +106,9 @@
   name: H2O
   formula: H2O
   charge: 0
-  kegg: C00001
+  kegg:
+  - C00001
+  - C01328
 - id: cpd00002
   name: ATP
   formula: C10H13N5O13P3
@@ -166,7 +168,9 @@
   name: NH3
   formula: H4N
   charge: 1
-  kegg: C01342
+  kegg:
+  - C01342
+  - C00014
 - id: cpd00014
   name: UDP
   formula: C9H12N2O12P2
@@ -211,7 +215,9 @@
   name: L-Glutamate
   formula: C5H8NO4
   charge: -1
-  kegg: C00025
+  kegg:
+  - C00025
+  - C00302
 - id: cpd00024
   name: 2-Oxoglutarate
   formula: C5H4O5
@@ -231,7 +237,10 @@
   name: D-Glucose
   formula: C6H12O6
   charge: 0
-  kegg: C00267
+  kegg:
+  - C00267
+  - C00293
+  - C00031
 - id: cpd00028
   name: Heme
   formula: C34H30FeN4O4
@@ -291,7 +300,9 @@
   name: L-Lysine
   formula: C6H15N2O2
   charge: 1
-  kegg: C00047
+  kegg:
+  - C00047
+  - C16440
 - id: cpd00040
   name: Glyoxalate
   formula: C2HO3
@@ -301,7 +312,9 @@
   name: L-Aspartate
   formula: C4H6NO4
   charge: -1
-  kegg: C00049
+  kegg:
+  - C00049
+  - C16433
 - id: cpd00042
   name: Glutathione
   formula: C10H16N3O6S
@@ -346,7 +359,9 @@
   name: L-Arginine
   formula: C6H15N4O2
   charge: 1
-  kegg: C00062
+  kegg:
+  - C00062
+  - C02385
 - id: cpd00052
   name: CTP
   formula: C9H13N3O14P3
@@ -361,7 +376,9 @@
   name: L-Serine
   formula: C3H7NO3
   charge: 0
-  kegg: C00716
+  kegg:
+  - C00716
+  - C00065
 - id: cpd00056
   name: TPP
   formula: C12H17N4O7P2S
@@ -376,7 +393,9 @@
   name: L-Methionine
   formula: C5H11NO2S
   charge: 0
-  kegg: C00073
+  kegg:
+  - C00073
+  - C01733
 - id: cpd00061
   name: Phosphoenolpyruvate
   formula: C3H3O6P
@@ -396,12 +415,16 @@
   name: Ornithine
   formula: C5H13N2O2
   charge: 1
-  kegg: C00077
+  kegg:
+  - C00077
+  - C01602
 - id: cpd00065
   name: L-Tryptophan
   formula: C11H12N2O2
   charge: 0
-  kegg: C00078
+  kegg:
+  - C00078
+  - C00806
 - id: cpd00066
   name: L-Phenylalanine
   formula: C9H11NO2
@@ -421,7 +444,9 @@
   name: L-Tyrosine
   formula: C9H11NO3
   charge: 0
-  kegg: C00082
+  kegg:
+  - C00082
+  - C01536
 - id: cpd00070
   name: Malonyl-CoA
   formula: C24H34N7O19P3S
@@ -436,7 +461,9 @@
   name: D-fructose-6-phosphate
   formula: C6H12O9P
   charge: -1
-  kegg: C05345
+  kegg:
+  - C05345
+  - C00085
 - id: cpd00073
   name: Urea
   formula: CH4N2O
@@ -466,22 +493,32 @@
   name: D-glucose-6-phosphate
   formula: C6H12O9P
   charge: -1
-  kegg: C00668
+  kegg:
+  - C00668
+  - C00092
 - id: cpd00080
   name: Glycerol-3-phosphate
   formula: C3H8O6P
   charge: -1
-  kegg: C00623
+  kegg:
+  - C00623
+  - C00093
 - id: cpd00081
   name: Sulfite
   formula: HO3S
   charge: -1
-  kegg: C00094
+  kegg:
+  - C00094
+  - C11481
 - id: cpd00082
   name: D-Fructose
   formula: C6H12O6
   charge: 0
-  kegg: C10906
+  kegg:
+  - C10906
+  - C01496
+  - C00095
+  - C02336
 - id: cpd00083
   name: GDP-mannose
   formula: C16H23N5O16P2
@@ -556,12 +593,16 @@
   name: ribose-5-phosphate
   formula: C5H10O8P
   charge: -1
-  kegg: C03736
+  kegg:
+  - C03736
+  - C00117
 - id: cpd00102
   name: Glyceraldehyde3-phosphate
   formula: C3H6O6P
   charge: -1
-  kegg: C00118
+  kegg:
+  - C00118
+  - C00661
 - id: cpd00103
   name: PRPP
   formula: C5H10O14P3
@@ -636,7 +677,9 @@
   name: L-Inositol
   formula: C6H12O6
   charge: 0
-  kegg: C00137
+  kegg:
+  - C00137
+  - C06151
 - id: cpd00123
   name: 3-Methyl-2-oxobutanoate
   formula: C5H7O3
@@ -666,7 +709,9 @@
   name: L-Malate
   formula: C4H4O5
   charge: -2
-  kegg: C00711
+  kegg:
+  - C00711
+  - C00149
 - id: cpd00132
   name: L-Asparagine
   formula: C4H8N2O3
@@ -686,7 +731,9 @@
   name: Homocysteine
   formula: C4H9NO2S
   charge: 0
-  kegg: C05330
+  kegg:
+  - C05330
+  - C00155
 - id: cpd00136
   name: 4-Hydroxybenzoate
   formula: C7H5O3
@@ -741,7 +788,9 @@
   name: HCN
   formula: CHN
   charge: 0
-  kegg: C00177
+  kegg:
+  - C00177
+  - C01326
 - id: cpd00152
   name: Agmatine
   formula: C5H16N4
@@ -751,7 +800,9 @@
   name: Xylose
   formula: C5H10O5
   charge: 0
-  kegg: C01394
+  kegg:
+  - C01394
+  - C00181
 - id: cpd00155
   name: Glycogen
   formula: C30H52O26
@@ -791,12 +842,17 @@
   name: 3-Phosphoglycerate
   formula: C3H5O7P
   charge: -2
-  kegg: C00197
+  kegg:
+  - C00197
+  - C00597
 - id: cpd00170
   name: Gluconolactone
   formula: C6H10O6
   charge: 0
-  kegg: C00198
+  kegg:
+  - C00198
+  - C16581
+  - C16830
 - id: cpd00171
   name: D-Ribulose5-phosphate
   formula: C5H10O8P
@@ -881,7 +937,9 @@
   name: DMAPP
   formula: C5H10O7P2
   charge: -2
-  kegg: C00235
+  kegg:
+  - C00235
+  - C17627
 - id: cpd00203
   name: 1,3-Bisphospho-D-glycerate
   formula: C3H6O10P2
@@ -906,7 +964,9 @@
   name: Lipoamide
   formula: C8H15NOS2
   charge: 0
-  kegg: C15972
+  kegg:
+  - C15972
+  - C00248
 - id: cpd00214
   name: Hexadecanoate
   formula: C16H31O2
@@ -981,7 +1041,9 @@
   name: Hydrogen Sulfide
   formula: H2S
   charge: 0
-  kegg: C00297
+  kegg:
+  - C00297
+  - C00283
 - id: cpd00241
   name: dGTP
   formula: C10H13N5O13P3
@@ -991,7 +1053,9 @@
   name: Bicarbonate
   formula: CHO3
   charge: -1
-  kegg: C01353
+  kegg:
+  - C01353
+  - C00288
 - id: cpd00244
   name: Ni2+
   formula: Ni
@@ -1026,7 +1090,9 @@
   name: Thiosulfate
   formula: O3S2
   charge: -2
-  kegg: C05529
+  kegg:
+  - C05529
+  - C00320
 - id: cpd00269
   name: 2-Oxoadipate
   formula: C6H6O5
@@ -1081,12 +1147,16 @@
   name: Undecaprenyl phosphate
   formula: C55H90O4P
   charge: -1
-  kegg: C17556
+  kegg:
+  - C17556
+  - C00348
 - id: cpd00287
   name: 3-Oxo-2-methylpropanoate
   formula: C4H5O3
   charge: -1
-  kegg: C00349
+  kegg:
+  - C00349
+  - C06002
 - id: cpd00288
   name: D-Glucosamine phosphate
   formula: C6H14NO8P
@@ -1101,7 +1171,9 @@
   name: D-fructose-1,6-bisphosphate
   formula: C6H12O12P2
   charge: -2
-  kegg: C00354
+  kegg:
+  - C00354
+  - C05378
 - id: cpd00294
   name: dAMP
   formula: C10H13N5O6P
@@ -1211,7 +1283,9 @@
   name: D-Galactose 1-phosphate
   formula: C6H12O9P
   charge: -1
-  kegg: C00446
+  kegg:
+  - C00446
+  - C03384
 - id: cpd00349
   name: Sedoheptulose 1,7-bisphosphate
   formula: C7H14O13P2
@@ -1266,7 +1340,9 @@
   name: Chinone
   formula: C6H4O2
   charge: 0
-  kegg: C00472
+  kegg:
+  - C00472
+  - C15602
 - id: cpd00367
   name: Cytidine
   formula: C9H13N3O5
@@ -1316,7 +1392,10 @@
   name: Quinol
   formula: C6H6O2
   charge: 0
-  kegg: C02389
+  kegg:
+  - C02389
+  - C15603
+  - C00530
 - id: cpd00418
   name: 'NO'
   formula: 'NO'
@@ -1346,7 +1425,11 @@
   name: Phenyl acetate
   formula: C8H8O2
   charge: 0
-  kegg: C07086
+  kegg:
+  - C07086
+  - C05613
+  - C15583
+  - C00548
 - id: cpd00434
   name: 4-Aminobutanal
   formula: C4H10NO
@@ -1371,7 +1454,9 @@
   name: Dihydrolipoamide
   formula: C8H17NOS2
   charge: 0
-  kegg: C00579
+  kegg:
+  - C00579
+  - C15973
 - id: cpd00452
   name: Phenylacetyl-CoA
   formula: C29H39N7O17P3S
@@ -1381,7 +1466,9 @@
   name: 1,2-Propanediol
   formula: C3H8O2
   charge: 0
-  kegg: C00583
+  kegg:
+  - C00583
+  - C02917
 - id: cpd00464
   name: alpha-Tolualdehyde
   formula: C8H8O
@@ -1436,7 +1523,9 @@
   name: 2-Aceto-2-hydroxybutanoate
   formula: C6H9O4
   charge: -1
-  kegg: C00659
+  kegg:
+  - C00659
+  - C06006
 - id: cpd00501
   name: beta-D-Glucose 1-phosphate
   formula: C6H12O9P
@@ -1456,7 +1545,9 @@
   name: 2-keto-3-methyl-valerate
   formula: C6H9O3
   charge: -1
-  kegg: C03465
+  kegg:
+  - C03465
+  - C00671
 - id: cpd00510
   name: deoxyribose-5-phosphate
   formula: C5H10O7P
@@ -1551,7 +1642,9 @@
   name: 2-Acetolactate
   formula: C5H7O4
   charge: -1
-  kegg: C06010
+  kegg:
+  - C06010
+  - C00900
 - id: cpd00683
   name: Dihydropteroate
   formula: C14H13N6O3
@@ -1666,7 +1759,9 @@
   name: D-fructose-1-phosphate
   formula: C6H12O9P
   charge: -1
-  kegg: C01094
+  kegg:
+  - C01094
+  - C02976
 - id: cpd00805
   name: D-Tagatose 6-phosphate
   formula: C6H12O9P
@@ -1691,7 +1786,9 @@
   name: 4-Hydroxy-2-oxoglutarate
   formula: C5H4O6
   charge: -2
-  kegg: C05946
+  kegg:
+  - C05946
+  - C01127
 - id: cpd00834
   name: Phosphopantetheine
   formula: C11H22N2O7PS
@@ -1701,7 +1798,9 @@
   name: S-Acetyldihydrolipoamide
   formula: C10H19NO2S2
   charge: 0
-  kegg: C16255
+  kegg:
+  - C16255
+  - C01136
 - id: cpd00837
   name: S-Adenosylmethioninamine
   formula: C14H24N6O3S
@@ -1771,7 +1870,9 @@
   name: 3-Hydroxyisobutyrate
   formula: C4H7O3
   charge: -1
-  kegg: C06001
+  kegg:
+  - C06001
+  - C01188
 - id: cpd00890
   name: UDP-N-acetylmuramoyl-L-alanine
   formula: C23H33N4O20P2
@@ -1831,7 +1932,9 @@
   name: 1-(2-carboxyphenylamino)-1-deoxyribulose 5-phosphate
   formula: C12H14NO9P
   charge: -2
-  kegg: C01302
+  kegg:
+  - C01302
+  - C10528
 - id: cpd00957
   name: 2,5-Diamino-6-(5'-phosphoribosylamino)-4-pyrimidineone
   formula: C9H15N5O8P
@@ -1876,7 +1979,9 @@
   name: Arsenate
   formula: HO4As
   charge: -2
-  kegg: C01478
+  kegg:
+  - C01478
+  - C11215
 - id: cpd01080
   name: octadecanoate (n-C18:0)
   formula: C18H35O2
@@ -1901,7 +2006,9 @@
   name: Glyceollin
   formula: C20H18O5
   charge: 0
-  kegg: C15601
+  kegg:
+  - C15601
+  - C01701
 - id: cpd01211
   name: Thiocyanate
   formula: CNS
@@ -2016,7 +2123,9 @@
   name: 6-Phosphosucrose
   formula: C12H22O14P
   charge: -1
-  kegg: C16688
+  kegg:
+  - C16688
+  - C02591
 - id: cpd01695
   name: Myristoyl-CoA
   formula: C35H59N7O17P3S
@@ -2101,7 +2210,9 @@
   name: 4-Hydroxy-L-glutamate
   formula: C5H8NO5
   charge: -1
-  kegg: C03079
+  kegg:
+  - C03079
+  - C05947
 - id: cpd01977
   name: 4-Phospho-L-aspartate
   formula: C4H7NO7P
@@ -2126,7 +2237,9 @@
   name: (R)-1-Amino-2-propanol
   formula: C3H10NO
   charge: 1
-  kegg: C03194
+  kegg:
+  - C03194
+  - C05771
 - id: cpd02069
   name: 3-Phosphonooxypyruvate
   formula: C3H3O7P
@@ -2231,7 +2344,9 @@
   name: Resacetophenone
   formula: C8H8O3
   charge: 0
-  kegg: C13635
+  kegg:
+  - C13635
+  - C03663
 - id: cpd02315
   name: 6-Pyruvoyltetrahydropterin
   formula: C9H11N5O3
@@ -2286,7 +2401,9 @@
   name: 2,3-Dihydroxy-isovalerate
   formula: C5H9O4
   charge: -1
-  kegg: C04039
+  kegg:
+  - C04039
+  - C04272
 - id: cpd02506
   name: 5-Amino-4-imidazolecarboxyamide
   formula: C4H6N4O
@@ -2296,7 +2413,9 @@
   name: 2,3-Dihydroxy-3-methylvalerate
   formula: C6H11O4
   charge: -1
-  kegg: C04104
+  kegg:
+  - C04104
+  - C06007
 - id: cpd02547
   name: (R)-1-Aminopropan-2-yl phosphate
   formula: C3H10NO4P
@@ -2326,7 +2445,9 @@
   name: N-Acetyl-D-glucosamine1-phosphate
   formula: C8H15NO9P
   charge: -1
-  kegg: C04501
+  kegg:
+  - C04501
+  - C04256
 - id: cpd02625
   name: 3-Hydroxy-L-1-pyrroline-5-carboxylate
   formula: C5H6NO3
@@ -2476,7 +2597,9 @@
   name: SAICAR
   formula: C13H16N4O12P
   charge: -3
-  kegg: C04823
+  kegg:
+  - C04823
+  - C04811
 - id: cpd02930
   name: 2,3-Bis(beta-hydoroxymyristoyl)-beta-D-glucosaminyl 1-phosphate
   formula: C34H65NO12P
