excel/iSyn731: Fix reactions imported without compartment

--- a/excel/iSyn731/reactions.yaml
+++ b/excel/iSyn731/reactions.yaml
@@ -3613,7 +3613,7 @@
   ec: 4.2.1.75
 - id: rxn02265
   name: rxn02265
-  equation: '|cpd00755[c]| <=> |cpd00001[c]| + |cpd03414|'
+  equation: '|cpd00755[c]| <=> |cpd00001[c]| + |cpd03414[c]|'
   subsystem: Porphyrin and chlorophyll metabolism
 - id: rxn02275
   name: 4-Guanidinobutanamide amidohydrolase
@@ -6358,7 +6358,7 @@
   ec: 1.4.3.5
 - id: rxn09693
   name: Biotin uptake
-  equation: '|cpd00067[e]| + |cpd00104[e]| <=> |cpd00067[c]| + |cpd00104|'
+  equation: '|cpd00067[e]| + |cpd00104[e]| <=> |cpd00067[c]| + |cpd00104[c]|'
   subsystem: Transport
 - id: rxn09753
   name: fumarate reductase, cytosolic/mitochondrial
@@ -6670,7 +6670,7 @@
   ec: 2.4.1.18
 - id: rxn13759
   name: Arsenite transporter
-  equation: '|cpd00067[e]| + |cpd01048[e]| <=> |cpd00067| + |cpd01048[c]|'
+  equation: '|cpd00067[e]| + |cpd01048[e]| <=> |cpd00067[c]| + |cpd01048[c]|'
   subsystem: Transport
 - id: rxn13840
   name: (3R)-3-Hydroxypalmitoyl-[acyl-carrier-protein] hydro-lyase
