Reimport sbml/AORYZAE_COBRA

--- a/sbml/AORYZAE_COBRA/model.yaml
+++ b/sbml/AORYZAE_COBRA/model.yaml
@@ -1,11 +1,26 @@
 name: A. oryzae genome-scale model
-biomass: R_r2359
 default_flux_limit: 1000.0
+compartments:
+- id: c
+  adjacent_to:
+  - p
+  - m
+  - e
+  name: Cytosol
+- id: e
+  adjacent_to: c
+  name: Extracellular
+- id: m
+  adjacent_to: c
+  name: Mitochondria
+- id: p
+  adjacent_to: c
+  name: Peroxisome
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
 limits:
 - include: limits.yaml
