--- a/sbml/AraGEM/limits.yaml
+++ b/sbml/AraGEM/limits.yaml
@@ -1,49 +1,39 @@
-- reaction: R_BIO_L
-  lower: 0.11
-  upper: 0.11
-- reaction: R_R00086_c
+- reaction: BIO_L
+  fixed: 0.11
+- reaction: R00086_c
   lower: 0.0
-- reaction: R_R00093_p
+- reaction: R00093_p
   upper: 0.0
-- reaction: R_R00114_c
+- reaction: R00114_c
   upper: 0.0
-- reaction: R_R00149_p
+- reaction: R00149_p
+  fixed: 0.0
+- reaction: R00243_c
   lower: 0.0
-  upper: 0.0
-- reaction: R_R00243_c
+- reaction: R00243_m
   lower: 0.0
-- reaction: R_R00243_m
+- reaction: R00253_m
   lower: 0.0
-- reaction: R_R00253_m
+- reaction: R00253_p
   lower: 0.0
-- reaction: R_R00253_p
+- reaction: R00343_m
+  fixed: 0.0
+- reaction: R00472_x
   lower: 0.0
-- reaction: R_R00343_m
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R00472_x
-  lower: 0.0
-- reaction: R_R00945_c
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R01221_m
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R01398_c
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R01752_c
-  lower: 0.0
-  upper: 0.0
-- reaction: R_R05875_p
-  lower: 0.0
-  upper: 0.0
-- reaction: R_TCM22
-  lower: 0.0
-  upper: 0.0
-- reaction: R_TCP27
-  lower: 0.0
-  upper: 0.0
-- reaction: R_TCX14
+- reaction: R00945_c
+  fixed: 0.0
+- reaction: R01221_m
+  fixed: 0.0
+- reaction: R01398_c
+  fixed: 0.0
+- reaction: R01752_c
+  fixed: 0.0
+- reaction: R05875_p
+  fixed: 0.0
+- reaction: TCM22
+  fixed: 0.0
+- reaction: TCP27
+  fixed: 0.0
+- reaction: TCX14
   lower: -10.0
   upper: 10.0
