--- a/sbml/STM_v1.0/limits.yaml
+++ b/sbml/STM_v1.0/limits.yaml
@@ -1,57 +1,56 @@
-- reaction: R_5CM2HMUDI
+- reaction: 5CM2HMUDI
   lower: 0.0
-- reaction: R_AB6PGH
+- reaction: AB6PGH
   upper: 0.0
-- reaction: R_ACMUMtex
+- reaction: ACMUMtex
   lower: 0.0
-- reaction: R_AEPPYRTA
+- reaction: AEPPYRTA
   lower: 0.0
-- reaction: R_ATPM
-  lower: 8.39
-  upper: 8.39
-- reaction: R_CAT
+- reaction: ATPM
+  fixed: 8.39
+- reaction: CAT
   upper: 0.0
-- reaction: R_CHITOBpts
+- reaction: CHITOBpts
   upper: 0.0
-- reaction: R_CHITPH
+- reaction: CHITPH
   upper: 0.0
-- reaction: R_COAPPALDH
+- reaction: COAPPALDH
   lower: -1000.0
-- reaction: R_COBALT2tpp
+- reaction: COBALT2tpp
   lower: 0.0
-- reaction: R_DSCLCOCH
+- reaction: DSCLCOCH
   lower: 0.0
-- reaction: R_ENTERHpp
+- reaction: ENTERHpp
   upper: 0.0001
-- reaction: R_FHL
+- reaction: FHL
   upper: 0.0
-- reaction: R_GALCTNt2pp
+- reaction: GALCTNt2pp
   lower: 0.0
-- reaction: R_HISNH4L
+- reaction: HISNH4L
   upper: 0.0
-- reaction: R_LYSt2pp
+- reaction: LYSt2pp
   lower: 0.0
-- reaction: R_MG2tpp
+- reaction: MG2tpp
   lower: 0.0
-- reaction: R_OA4L_ST
+- reaction: OA4L_ST
   upper: 0.0
-- reaction: R_OA4VL_ST
+- reaction: OA4VL_ST
   upper: 0.0
-- reaction: R_OAO4t3ex
+- reaction: OAO4t3ex
   upper: 0.0
-- reaction: R_OAO4t3pp
+- reaction: OAO4t3pp
   upper: 0.0
-- reaction: R_PTRCt2pp
+- reaction: PTRCt2pp
   lower: 0.0
-- reaction: R_SALCHS4FEHpp
+- reaction: SALCHS4FEHpp
   upper: 0.0001
-- reaction: R_SALCHS4Hpp
+- reaction: SALCHS4Hpp
   upper: 0.0001
-- reaction: R_SARCOX
+- reaction: SARCOX
   upper: 0.0
-- reaction: R_SPODM
+- reaction: SPODM
   upper: 0.0
-- reaction: R_SPODMpp
+- reaction: SPODMpp
   upper: 0.0
-- reaction: R_UROCANH
+- reaction: UROCANH
   upper: 0.0
