Reimport sbml/SpoMBEL1693

--- a/sbml/SpoMBEL1693/model.yaml
+++ b/sbml/SpoMBEL1693/model.yaml
@@ -1,8 +1,11 @@
 name: Schizosaccharomyces_pombe
-biomass: RXNBiomass
+extracellular: cell
+compartments:
+- id: cell
+  name: cell
 compounds:
 - include: compounds.yaml
 reactions:
 - include: reactions.yaml
-media:
-- include: medium.yaml
+exchange:
+- include: exchange.yaml
