--- a/sbml/iAF1260/limits.yaml
+++ b/sbml/iAF1260/limits.yaml
@@ -1,11 +1,10 @@
-- reaction: R_ATPM
-  lower: 8.39
-  upper: 8.39
-- reaction: R_CAT
+- reaction: ATPM
+  fixed: 8.39
+- reaction: CAT
   upper: 0.0
-- reaction: R_FHL
+- reaction: FHL
   upper: 0.0
-- reaction: R_SPODM
+- reaction: SPODM
   upper: 0.0
-- reaction: R_SPODMpp
+- reaction: SPODMpp
   upper: 0.0
