Reimport sbml/iCA1273

--- a/sbml/iCA1273/limits.yaml
+++ b/sbml/iCA1273/limits.yaml
@@ -1,11 +1,12 @@
-- reaction: R_ATPM
-  lower: 8.39
-  upper: 8.39
-- reaction: R_CAT
+- reaction: ATPM
+  fixed: 8.39
+- reaction: CAT
   upper: 0.0
-- reaction: R_FHL
+- reaction: EX_lipidA_core_e_
+  lower: 0.0
+- reaction: FHL
   upper: 0.0
-- reaction: R_SPODM
+- reaction: SPODM
   upper: 0.0
-- reaction: R_SPODMpp
+- reaction: SPODMpp
   upper: 0.0
